prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/cannot_delete.nut
// EXPECT_ERROR: "can't delete"
#allow-delete-operator
local x = 5
delete x
